# countries-tools-rs

./: Cargo.toml  README.md
benches/: bench.rs
src/: countries.rs  countries_short_names.rs  lib.rs
