[package]
name = "countries-tools"
description = "ISO 3166 country codes and names"
version = "0.1.0"
edition = "2021"

include = [
]
exclude = [
    ".gitignore",
    "Cargo.lock",
    "countries.json",
    "countries.json.xz",
]

[features]
default = ["short-names"]
short-names = []

[dependencies]
parse-display = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
